--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "react-clicky-game",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mday1313.github.io/react-clicky-game/",
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
